# ai-code-cognitive-stress

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SKILL.md  install.py  install.sh  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.cmd  session-start.json  session-start.py  session-start.sh
.github/workflows/: tests.yml  widget.yml
ai_code_cognitive_stress/: __init__.py  __main__.py
ai_code_cognitive_stress/adapters/: __init__.py  base.py  claude_code.py  codex.py
ai_code_cognitive_stress/core/: citations.py  citations.yml  config.default.json  config.py  i18n.py
ai_code_cognitive_stress/output/: dayview.py  render.py  scales.py  serialize.py  widget_card.py
ai_code_cognitive_stress/pipeline/: aggregate.py  ingest.py  metrics.py  subjective.py
ai_code_cognitive_stress/research/: calibrate.py  research_export.py
desktop/gtk/: README.md  cognitive-stress.desktop  cognitive-stress.py
desktop/ubersicht/: ai-code-cognitive-stress.jsx  cognitive-stress.jsx  preview.html
desktop/windows/: README.md  cognitive-stress.ps1  fetch-webview2.ps1
paper/: Makefile  README.md  main.tex  presentation.tex  references.bib
scripts/: capture_screenshots.py  capture_widget_screenshots.py  ci_seed_session.py  ci_widget_ui_check.py  generate_demo_report.py
stress_levels/: __init__.py  __main__.py  aggregate.py  calibrate.py  citations.yml  config.json  config.py  dayview.py  discovery.py  i18n.py  ingest.py  markdown_min.py  metrics.py  render.py  research_export.py  scales.py  serialize.py  widget.py  widget_card.py
stress_levels/locales/: en.json
stress_levels/sources/: __init__.py  aider.py  base.py  claude_code.py  codex.py  git_closure.py
templates/: report.html
tests/: conftest.py  test_aggregate.py  test_calibrate.py  test_citations.py  test_cli.py  test_config.py  test_cross_platform.py  test_dayview.py  test_discovery.py  test_i18n.py  test_ingest.py  test_markdown_min.py  test_metrics.py  test_render.py  test_research_export.py  test_scales.py  test_serialize.py  test_session_welcome.py  test_sources.py  test_widget.py  test_widget_card.py
tests/adapters/: conftest.py  test_claude_code.py  test_codex.py  test_protocol.py
tests/core/: test_citations.py  test_config.py  test_i18n.py  test_markdown_min.py
tests/desktop/: test_host_protocol.py  test_state_roundtrip.py  test_ubersicht.py
tests/output/: test_dayview.py  test_grader.py  test_render.py  (+3 more)
(+25 files in other folders)
