[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-cognitive-stress"
dynamic = ["version"]
description = "A self-supervisory cognitive-stress profile for agent-coding-tool users — measures parallel-session load, interruptions, and closure deficit against your own baseline and the research literature."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Marinos Prevenios" },
]
keywords = [
    "agent-coding", "llm-agents",
    "cognitive-load", "burnout", "developer-productivity", "wellbeing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
# Zero third-party runtime dependencies — pure stdlib.
dependencies = []

[project.optional-dependencies]
# Dev/CI only — the runtime stays pure stdlib.
test = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
# `uvx ai-code-cognitive-stress ...` resolves the tool by package name, so the
# primary script shares that name. `aicogstress` is a short alias for `pipx install`
# users (note: `uvx aicogstress` will NOT work — uvx keys on the package name).
ai-code-cognitive-stress = "ai_code_cognitive_stress.__main__:main"
aicogstress = "ai_code_cognitive_stress.__main__:main"

[tool.hatch.version]
path = "ai_code_cognitive_stress/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ai_code_cognitive_stress"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
source = ["ai_code_cognitive_stress"]
branch = true

[tool.coverage.report]
show_missing = true
# Regression floor. CI sits at ~93.5% across the 3.10–3.14 matrix; 90 leaves a
# safe margin. The remaining gaps are defensive filesystem-error handlers.
fail_under = 90
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
